--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,7 +9,7 @@
     // See also https://aka.ms/tsconfig/module
     "module": "commonjs",
     "target": "es2018",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "lib": ["es2018"],
     // For nodejs:
     // "lib": ["esnext"],
@@ -40,7 +40,9 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
   },
-  "include": ["src/**/*", "config/**/*", "tests/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*", "config/**/*"],
+  "exclude": ["node_modules", "dist", "tests/**/*"]
 }
