--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,10 @@
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "tailwindcss": "^3.4.17",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
