--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -43,6 +43,6 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
   },
-  "include": ["src/**/*", "config/**/*"],
-  "exclude": ["node_modules", "dist", "tests/**/*"]
+  "include": ["src/**/*", "config/**/*", "tests/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
